<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.msx80.omicron</groupId>
  <artifactId>turnsofwar</artifactId>
 <!-- NOTE: keep Major and Minor version at 0 because Incremental is used to derive versionCode for android -->	
	<version>0.0.1</version>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>9</maven.compiler.source>
		<maven.compiler.target>9</maven.compiler.target>
		<omicron.engine.version>0.0.12</omicron.engine.version>
	</properties>
	
	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>com.github.msx80</groupId>
			<artifactId>omicron-api</artifactId>
			<version>0.0.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.msx80</groupId>
			<artifactId>omicron-basics</artifactId>
			<version>0.0.6</version>
		</dependency>
		<dependency>
			<artifactId>tilefest-runtime</artifactId>
			<groupId>com.github.msx80.tilefest</groupId>
			<version>0.0.1</version>
		</dependency>
		
		<dependency>
			<groupId>com.github.msx80.omicron</groupId>
			<version>${omicron.engine.version}</version>
			<artifactId>omicron-desktop</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.msx80.omicron</groupId>
			<artifactId>desktop-lib</artifactId>
			<version>${omicron.engine.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
	<resources>
		<resource>
		    <directory>src/main/resources</directory>
		    <filtering>false</filtering>
		    <excludes>
		        <exclude>**/file1.bin</exclude>
		    </excludes>
		</resource>
		<resource>
		    <directory>src/main/resources</directory>
		    <filtering>true</filtering>
		    <includes>
		        <include>**/file1.bin</include>
		    </includes>
		</resource>
	
	</resources>
		<plugins>
			<plugin>
			  <groupId>io.github.git-commit-id</groupId>
			  <artifactId>git-commit-id-maven-plugin</artifactId>
			  <version>4.9.9</version>
				 <executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
				<configuration>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
				</configuration>
			</plugin>
			<plugin>
				<!-- read omicron.properties for main class -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.2.1</version>
				<executions>
					<execution>
						<phase>initialize</phase>
						<goals>
							<goal>read-project-properties</goal>
						</goals>
						<configuration>
							<files>
								<file>${project.build.resources[0].directory}/omicron.properties</file>
							</files>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- generate fat jar with the dependencies -->
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- rename the generated jar to an omicron cartridge -->
				<groupId>com.coderplus.maven.plugins</groupId>
				<artifactId>copy-rename-maven-plugin</artifactId>
				<version>1.0</version>
				<executions>
					<execution>
						<id>rename-file</id>
						<phase>package</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<sourceFile>${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar</sourceFile>
							<destinationFile>${project.artifactId}.omicron</destinationFile>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- make the game executable with exec:exec -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<executable>java</executable>
					<classpathScope>test</classpathScope>
					<arguments>
						<argument>-classpath</argument>
						<classpath />
						<argument>com.github.msx80.omicron.DesktopLauncher</argument>
						<argument>${omicron.pkg}.${omicron.main}</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

  
</project>
